--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,16 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
 .tl-wrapper {
   overflow: hidden;
 }
